[gd_scene load_steps=3 format=3 uid="uid://cj2clygujry4i"]

[ext_resource type="Script" path="res://objects/ui/extras/music_select.gd" id="1_aliij"]
[ext_resource type="Theme" uid="uid://cwtscierv2utd" path="res://assets/themes/main_theme.tres" id="1_dlj7c"]

[node name="MusicSelect" type="Control"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_dlj7c")
script = ExtResource("1_aliij")

[node name="MusicName" type="Label" parent="."]
modulate = Color(0.854902, 0.882353, 0.898039, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -26.0
offset_right = 157.0
offset_bottom = -6.0
grow_vertical = 2
text = "Music Track name"

[node name="MusicAuthor" type="Label" parent="."]
modulate = Color(0.854902, 0.882353, 0.898039, 0.392157)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 6.0
offset_right = 157.0
offset_bottom = 26.0
grow_vertical = 2
text = "Author"

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -14.0
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 2
text = "Play"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
